# YingQ-for-Houdini

./: PARMmenu.xml  README.md  VEXpressions.txt
desktop/: Build0_1.desk  no_parameter.desk  python_HDA.desk  vertical.desk
dso/: SOP_Star.exp  SOP_Star.lib
dso/SOP_Star/: CMakeLists.txt  SOP_Star.C  SOP_Star.h
houdini_temp/: 11_grid_pts_snippet.vfl  11_primitivewrangle1_snippet.vfl  15_gather_k_depth_neighbours_snippet.vfl  16_subnet1_newparameter.txt  181_python2_python.py  18_python_code_ying1_newparameter.txt  18_snake_path_snippet.vfl  2170_pointwrangle4_snippet.vfl  2174_pointwrangle4_snippet.vfl  21_Function_defined_locally_snippet.vfl  233_volumewrangle3_snippet.vfl  260_create_point_structure_snippet.vfl  2687_pointwrangle5_snippet.vfl  277_observation_and_propogation_snippet.vfl  29_random_walk_snippet.vfl  35_volumewrangle1_snippet.vfl  400_proximity_snippet.vfl  4310_connectContBalconies_snippet.vfl  459_setup_rules_python.py  45_add_paths_snippet.vfl  522_python4_python.py  524_python4_python.py  68_setup_rules_python.py  70_load_4_edge_pixel_python.py  70_python1_python.py  87_load_img_list_python.py  FUSE_copy.cpio  SOP_copy.cpio  Ying Measure Height.hdalc  __switchGradient__  __switchGradient__.cmd  __switchsubnet1__  __switchsubnet1__.cmd  crash.FeE Mesh Layout.YingQ_87904.hip  crash.FeE Mesh Layout.YingQ_87904_log.txt  crash.Poly Bevel Bug.YingQ_21220.hip  crash.Poly Bevel Bug.YingQ_21220_log.txt  crash.VAT3_Tutorial_Simulations.YingQ_13128.hip  crash.VAT3_Tutorial_Simulations.YingQ_13128_log.txt  crash.cotton_candy_tearing_01.YingQ_11272_log.txt  (+838 more)
(+867 files in other folders)
